--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -17,7 +17,7 @@ const { title, description, image = "/social_img.png" } = Astro.props;
 <meta name="viewport" content="width=device-width" />
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <meta name="generator" content={Astro.generator} />
-<meta name="theme-color" content="#0a0a0a" />
+<meta name="theme-color" content="#0e0d0e" />
 
 <!-- Primary Meta Tags -->
 <title>{title}</title>
