--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,22 +4,30 @@
   <div class="navbar">
     <div class="navbar-start">
       <label for="my-drawer" class="btn btn-square btn-ghost">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          class="inline-block h-5 w-5 stroke-gray-200"
-          ><path
+        <div class="scale-x-[-1]">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="icon icon-tabler icon-tabler-menu-deep text-neutral-300"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            fill="none"
             stroke-linecap="round"
             stroke-linejoin="round"
-            stroke-width="2"
-            d="M4 6h16M4 12h16M4 18h16"></path>
-        </svg>
+            ><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path
+              d="M4 6h16"></path><path d="M7 12h13"></path><path d="M10 18h10"
+            ></path></svg
+          >
+        </div>
       </label>
     </div>
     <div class="navbar-center">
-      <p class="poppins-bold btn btn-ghost text-xl normal-case text-gray-200">
-        {"<Y O S S 🚀/>"}
+      <p
+        class="poppins-bold btn btn-ghost text-xl normal-case text-neutral-300"
+      >
+        {"Y O S S 🚀"}
       </p>
     </div>
     <div class="navbar-end"></div>
