update SideBar.astro, SideItem.astro and BaseLayout.astro

--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -44,7 +44,7 @@ import SideItem from "./SideItem.astro";
     <div
       class="flex shrink grow flex-col gap-2 text-neutral-300 md:items-center md:justify-center lg:gap-2"
     >
-      <SideItem id="home" label="home" href="/">
+      <SideItem id="home" label="Inicio" href="/">
         <lord-icon
           colors="primary:#d4d4d4"
           src="/icons/system-solid-41-home.json"
@@ -62,7 +62,7 @@ import SideItem from "./SideItem.astro";
         </lord-icon>
       </SideItem>
 
-      <SideItem id="blog" label="Proyectos" href="/blog">
+      <SideItem id="blog" label="Blog" href="/blog">
         <lord-icon
           colors="primary:#d4d4d4"
           src="/icons/system-solid-14-article.json"
