--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -52,7 +52,7 @@ const last_posts = posts.slice(0, 3);
     <!-- End Cloudflare Web Analytics -->
   </head>
 
-  <body class="background-texture">
+  <body class="background-texture h-screen overflow-auto">
     <div class="drawer drawer-mobile text-neutral-300">
       <input id="my-drawer" type="checkbox" class="drawer-toggle" />
       <div class="drawer-content">
