--- a/src/components/SideItem.astro
+++ b/src/components/SideItem.astro
@@ -4,9 +4,10 @@ const { id, href, label } = Astro.props;
 
 <a
   rel="prefetch"
-  class="flex items-center gap-2 rounded fill-neutral-300 p-2 transition-all hover:bg-neutral md:h-10 md:w-10 md:justify-center md:rounded-2xl lg:rounded-xl lg:hover:scale-105"
+  class="flex items-center gap-2 rounded fill-neutral-300 p-2 transition-all hover:bg-neutral md:h-10 md:w-10 md:justify-center md:rounded-2xl lg:rounded-xl lg:hover:scale-105 portrait:rounded-2xl"
   id={id}
   href={href}
+  title={label}
 >
   <slot />
   <p class="lg:hidden">{label}</p>
